12.oct (ws)
      - fix #7479: png resolution preference ignored; command line option
        now overrides preference setting
      - fix #7468: Note change in part not updated in full score if in note
        entry mode
11.oct (ws)
      - fix #7461: appstyle-dark.css makes no distinction between active
        and disabled buttons
      - fix #7447: Lyrics deleted when changing note
10.oct (ws)
      - improved capella import
      (db)
      - fix local handbook disabled when no file is open
      - fix #7425: Space bar for play/pause (and zero for rests)
      - correct stem lengths for multi-flag notes (see bug #7415)
      - update Fingering and Lines menu windows to match their palettes
8.oct (ws)
      - fix #7416: triplet causes crash
      - fix #7418: crash when delete soundfont while playing
      - fix #1395: Accidental after a tied note
      - fix #7415: stems too short for 32th and 64th notes
6.oct (ws)
      - fix #7403: double note duration (W) changes pitch
      - remove unused "system" text styles
      - remove page number text styles
      - replace text style number by text style name in .msc[xz] files to
        make text styles more easily extendable
      - new text property "styled". Styled text changes if the associated
        style changes.
5. oct (ws)
      - better tuplet layout (#7375)
      - fix copy&paste of tuplets
      - bb import fixes
      - capella import fixes
      - fix: some elements were not clickable before second layout pass
3. oct (ws)
      - create full measure rests on midi import
2. oct (ws)
      - added libpoppler to build system
      - remove libgsl dependency from omr build
      (lv)
      - #5637 support reading bww files: fix beam start
1. oct (ws)
      - fix #7345: opening bach-bc2 demo causes crash
      - TextStyle and Style are now implicitly shared objects to reduce
        memory resources and speedup some operations
      - move TextStyle to Style
29.sep (ws)
      - fix #7303