@@ -3,6 +3,8 @@
         now overrides preference setting
       - fix #7468: Note change in part not updated in full score if in note
         entry mode
+      (db)
+      - Update mixer after Create > Instruments dialog (see #6505)
 11.oct (ws)
       - fix #7461: appstyle-dark.css makes no distinction between active
         and disabled buttons
